Changelog
=========


1.17.1 (unreleased)
-------------------

- Nothing changed yet.


1.17.0 (2016-01-22)
-------------------

- Add ``bin/upgrade plone_upgrade_needed`` command.  [jone]


1.16.3 (2016-01-22)
-------------------

- Fix upgrade scaffolding when having dots or other
  non-alphanumeric characters. [jone]


1.16.2 (2016-01-15)
-------------------

- Actually the same as 1.16.1, but pypi was broken when I
  released it and now it does not let me use the same version
  number. :-(
  [jone]


1.16.1 (2016-01-13)
-------------------

- Added documentation for the additions of the previous release.  [maurits]


1.16.0 (2016-01-05)
-------------------

- Added ``--all-sites`` option.  This iterates over all sites and
  performs the specified command on each of them.  A failing command
  for one site will stop the entire command.  [maurits]

- Configure logging for the command line utility.  By default print
  only our own logging, on info level or higher.  With the new
  ``--verbose`` option print all loggers (so also from other packages
  like ``requests``) at debug level and higher.  [maurits]

- Added ``plone_upgrade`` command to upgrade a Plone Site.  This is
  what you would manually do in the ``@@plone-upgrade`` view.  [maurits]

- Added support for installing profiles.  Profiles are only applied
  once.  Example command line: ``bin/upgrade install --site Plone
  --profiles Products.PloneFormGen:default``.  [maurits]

- Prevented UnicodeEncodeError when piping output of ``bin/upgrade
  sites``.  This would fail when a site had non-ascii characters in
  its title.  [maurits]


1.15.1 (2015-11-11)
-------------------

- Change instance detection to support any name.
  Before only "instance*" was supported.
  [jone]


1.15.0 (2015-10-30)
-------------------

- Make "blessed" dependency optional in the "colors" extras.
  [jone]

- Update references to class-migrated objects in the intid utility.
  [deiferni]


1.14.8 (2015-09-21)
-------------------
