@@ -7,7 +7,9 @@ from zope.interface import alsoProvides
 
 def wrap_upgrade_step(handler, upgrade_profile, base_profile, target_version):
     def upgrade_step_wrapper(portal_setup):
-        result = handler(portal_setup, upgrade_profile)
+        result = handler(portal_setup, upgrade_profile,
+                         base_profile=u'profile-' + base_profile,
+                         target_version=target_version)
 
         portal = getToolByName(portal_setup, 'portal_url').getPortalObject()
         recorder = getMultiAdapter((portal, base_profile),
